react router dom

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffff" />
     <meta
-      name="description"
-      content="Sign Up Project on React"
+    name="description"
+    content="Sign Up Project on React"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Sign Up</title>
   </head>
   <body>
